--- a/comment-on-issue/action.yml
+++ b/comment-on-issue/action.yml
@@ -13,12 +13,13 @@ runs:
   using: "composite"
   steps:
     - name: Comment back on issue
+      shell: bash
       run: |
         curl -sS -L -X POST \
         -H "Accept: application/vnd.github+json" \
-        -H "Authorization: Bearer $ {{ secrets.GH_TOKEN }}" \
+        -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
         -H "X-GitHub-Api-Version: 2022-11-28" \
-        "$ {{ inputs.issue_api_url }}/comments" \
+        "${{ inputs.issue_api_url }}/comments" \
         -d "{\"body\": \"$ {{ inputs.body }}\"}"
 
     # - id: build
