--- a/comment-on-issue/action.yml
+++ b/comment-on-issue/action.yml
@@ -1,26 +1,35 @@
 name: "Comment on Issue"
 description: "Post a comment to a GitHub issue (supports cross-repo)."
-author: "Your Org"
+author: "AgentSprint"
+
 inputs:
   issue_api_url:
     description: "Issue API URL (e.g. https://api.github.com/repos/ORG/REPO/issues/123)"
-    required: false
+    required: true
   body:
     description: "Comment body (Markdown supported)"
     required: true
+  token:
+    description: "GitHub token (optional). Omit to use the caller's GITHUB_TOKEN."
+    required: false
+    default: ""
 
 runs:
   using: "composite"
   steps:
-    - name: Comment back on issue
+    - name: Post comment
       shell: bash
+      env:
+        AUTH_TOKEN: ${{ inputs.token != '' && inputs.token || github.token }}
       run: |
+        set -euo pipefail
         curl -sS -L -X POST \
-        -H "Accept: application/vnd.github+json" \
-        -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
-        -H "X-GitHub-Api-Version: 2022-11-28" \
-        "${{ inputs.issue_api_url }}/comments" \
-        -d "{\"body\": \"$ {{ inputs.body }}\"}"
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${AUTH_TOKEN}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          "${{ inputs.issue_api_url }}/comments" \
+          -d "$(jq -n --arg body "${{ inputs.body }}" '{body:$body}')"
+
 
     # - id: build
     #   name: Build endpoint
