--- a/workflows/dispatches/action.yml
+++ b/workflows/dispatches/action.yml
@@ -38,39 +38,13 @@ runs:
         IN_TOKEN: ${{ inputs.token }}
         CALLER_OWNER: ${{ github.repository_owner }}
         CALLER_TOKEN: ${{ github.token }}
+        AUTH_TOKEN: ${{ inputs.token != '' && inputs.token || github.token }}
       run: |
         set -euo pipefail
-
-        OWNER="${IN_OWNER:-$CALLER_OWNER}"
-        REPO="${IN_REPO}"
-        WORKFLOW="${IN_WORKFLOW}"
-        REF="${IN_REF}"
-        TOKEN="${IN_TOKEN:-$CALLER_TOKEN}"
-        PAYLOAD="${IN_PAYLOAD}"
-
-        # quick JSON sanity check (uses Node, available on runners)
-        node -e "JSON.parse(process.env.PAYLOAD)" || { echo "payload_json is not valid JSON"; exit 1; }
-
-        URL="https://api.github.com/repos/${OWNER}/${REPO}/actions/workflows/${WORKFLOW}/dispatches"
-
-        # Use --fail-with-body if available so you can see API errors
-        if curl --help all 2>/dev/null | grep -q -- '--fail-with-body'; then
-          curl --fail-with-body -sS -L \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${TOKEN}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "${URL}" \
-            -d "{\"ref\":\"${REF}\",\"inputs\":${PAYLOAD}}"
-        else
-          resp="$(curl -sS -L -w '\n%{http_code}' \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${TOKEN}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "${URL}" \
-            -d "{\"ref\":\"${REF}\",\"inputs\":${PAYLOAD}}")"
-          code="${resp##*$'\n'}"; body="${resp%$'\n'$code}"
-          echo "$body"
-          test "$code" -lt 400
-        fi
+        curl -sS -f -L \
+        -X POST \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${AUTH_TOKEN}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/${{ env.IN_OWNER }}/${{ env.IN_REPO }}/actions/workflows/${{ env.IN_WORKFLOW }}.yml/dispatches \
+        -d "{\"ref\":\"${{ env.IN_REF }}\",\"inputs\":${{ env.IN_PAYLOAD }}}"
