--- a/pull_request/create/action.yml
+++ b/pull_request/create/action.yml
@@ -1,5 +1,5 @@
-name: "Open Pull Request"
-description: "Create a pull request on GitHub."
+name: "Merge Pull Request"
+description: "Merge a pull request on GitHub."
 author: "AgentSprint"
 
 inputs:
@@ -9,17 +9,8 @@ inputs:
   repo:
     description: "GitHub repository name"
     required: true
-  title:
-    description: "Pull request title"
-    required: true
-  body:
-    description: "Pull request body (Markdown supported)"
-    required: true
-  head:
-    description: "The name of the branch where your changes are implemented"
-    required: true
-  base:
-    description: "The name of the branch you want the changes pulled into"
+  pr_number:
+    description: "Pull request number"
     required: true
   token:
     description: "GitHub token (optional). Omit to use the caller's GITHUB_TOKEN."
@@ -30,16 +21,20 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: pull request open
+    - name: pull request merge
       shell: bash
       env:
         AUTH_TOKEN: ${{ inputs.token != '' && inputs.token || github.token }}
       run: |
         set -euo pipefail
         curl -L \
-          -X POST \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${AUTH_TOKEN}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/${{ inputs.owner }}/${{ inputs.repo }}/pulls \
-          -d '{"title":"${{ inputs.title }}","body":"${{ inputs.body }}","head":"${{ inputs.head }}","base":"${{ inputs.base }}"}'
+        -X PUT \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${AUTH_TOKEN}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/${{ inputs.owner }}/${{ inputs.repo }}/pulls/${{ inputs.pr_number }}/merge \
+        -d '{
+              "commit_title": "merging PR",
+              "commit_message": "Merging via API",
+              "merge_method": "squash"
+            }'
