--- a/pull_request/create/action.yml
+++ b/pull_request/create/action.yml
@@ -26,21 +26,31 @@ inputs:
     required: false
     default: ""
 
+outputs:
+  pr_number:
+    description: "Pull request number"
+    value: ${{ steps.create.outputs.pr_number }}
 
 runs:
   using: "composite"
   steps:
     - name: pull request Create
-      id: create_pull_request
+      id: create
       shell: bash
       env:
         AUTH_TOKEN: ${{ inputs.token != '' && inputs.token || github.token }}
       run: |
         set -euo pipefail
-        curl -L \
+        create_resp="$(curl -sS -L \
           -X POST \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${AUTH_TOKEN}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/${{ inputs.owner }}/${{ inputs.repo }}/pulls \
-          -d '{"title":"${{ inputs.title }}","body":"${{ inputs.body }}","head":"${{ inputs.head }}","base":"${{ inputs.base }}"}'
+          -d "{\"title\":\"${{ inputs.title }}\",\"body\":\"${{ inputs.body }}\",\"head\":\"${{ inputs.head }}\",\"base\":\"${{ inputs.base }}\"}" || true)"
+
+        # Try to parse number/urls from create response
+        pr_number="$(printf '%s' "$create_resp" | jq -r '.number // empty' 2>/dev/null || true)"
+        {
+          echo "pr_number=$pr_number"
+        } >> "$GITHUB_OUTPUT"
