--- a/pull_request/create/action.yml
+++ b/pull_request/create/action.yml
@@ -29,13 +29,13 @@ inputs:
 outputs:
   pr_number:
     description: "Pull request number"
-    value: ${{ steps.create.outputs.pr_number }}
+    value: ${{ steps.create_pull_request.outputs.pr_number }}
 
 runs:
   using: "composite"
   steps:
     - name: pull request Create
-      id: create
+      id: create_pull_request
       shell: bash
       env:
         AUTH_TOKEN: ${{ inputs.token != '' && inputs.token || github.token }}
