--- a/pull_request/update_labels/action.yml
+++ b/pull_request/update_labels/action.yml
@@ -31,9 +31,9 @@ runs:
       run: |
         set -euo pipefail
         curl -L \
-        -X POST \
-        -H "Accept: application/vnd.github+json" \
-        -H "Authorization: Bearer ${AUTH_TOKEN}" \
-        -H "X-GitHub-Api-Version: 2022-11-28" \
-        https://api.github.com/repos/${{ inputs.owner }}/${{ inputs.repo }}/issues/${{ inputs.pr_number }}/labels \
-        -d "{\"labels\":[\"${{ inputs.labels }}\"]}"
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${AUTH_TOKEN}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/${{ inputs.owner }}/${{ inputs.repo }}/issues/${{ inputs.pr_number }}/labels \
+          -d "{\"labels\": ${{ inputs.labels }}}"
