--- a/pull_request/update_labels/action.yml
+++ b/pull_request/update_labels/action.yml
@@ -12,8 +12,20 @@ inputs:
   pr_number:
     description: "Pull request number"
     required: true
-  labels:
-    description: "Labels to add to the pull request"
+  issue_url:
+    description: "URL of the issue to link to the pull request"
+    required: true
+  client_name:
+    description: "Name of the client making the request"
+    required: true
+  client_code:
+    description: "Code of the client making the request"
+    required: true
+  location:
+    description: "Location of the client making the request"
+    required: true
+  tfvars_filepath:
+    description: "Filepath to the Terraform variables file"
     required: true
   token:
     description: "GitHub token (optional). Omit to use the caller's GITHUB_TOKEN."
@@ -23,17 +35,28 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: pull request update labels
+    - name: Add labels to pull request
       id: pull_request_update_labels
       shell: bash
       env:
         AUTH_TOKEN: ${{ inputs.token != '' && inputs.token || github.token }}
       run: |
         set -euo pipefail
-        curl -L \
-        -X POST \
-        -H "Accept: application/vnd.github+json" \
-        -H "Authorization: Bearer ${AUTH_TOKEN}" \
-        -H "X-GitHub-Api-Version: 2022-11-28" \
-        https://api.github.com/repos/${{ inputs.owner }}/${{ inputs.repo }}/issues/${{ inputs.pr_number }}/labels \
-        -d "{\"labels\":[\"${{ inputs.labels }}\"]}"
+
+        # Build the labels payload safely
+        body=$(jq -n \
+          --arg cn "${{ inputs.client_name }}" \
+          --arg cc "${{ inputs.client_code }}" \
+          --arg loc "${{ inputs.location }}" \
+          --arg iu "${{ inputs.issue_url }}" \
+          --arg tf "${{ inputs.tfvars_filepath }}" \
+          '{labels: ["client_name:"+$cn, "client_code:"+$cc, "location:"+$loc, "issue_url:"+$iu, "tfvars_filepath:"+$tf]}')
+
+        # Add labels to the PR (PRs use the Issues labels endpoint)
+        curl -sS -f -L \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${AUTH_TOKEN}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          "https://api.github.com/repos/${{ inputs.owner }}/${{ inputs.repo }}/issues/${{ inputs.pr_number }}/labels" \
+          -d "$body"
