--- a/pull_request/create/action.yml
+++ b/pull_request/create/action.yml
@@ -12,8 +12,20 @@ inputs:
   title:
     description: "Pull request title"
     required: true
-  body:
-    description: "Pull request body (Markdown supported)"
+  issue_api_url:
+    description: "URL of the issue to link to the pull request"
+    required: true
+  client_name:
+    description: "Name of the client making the request"
+    required: true
+  client_code:
+    description: "Code of the client making the request"
+    required: true
+  location:
+    description: "Location of the client making the request"
+    required: true
+  tfvars_filepath:
+    description: "Filepath to the .tfvars file"
     required: true
   head:
     description: "The name of the branch where your changes are implemented"
@@ -47,7 +59,7 @@ runs:
           -H "Authorization: Bearer ${AUTH_TOKEN}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/${{ inputs.owner }}/${{ inputs.repo }}/pulls \
-          -d "{\"title\":\"${{ inputs.title }}\",\"body\":\"${{ inputs.body }}\",\"head\":\"${{ inputs.head }}\",\"base\":\"${{ inputs.base }}\"}" || true)"
+          -d "{\"title\":\"${{ inputs.title }}\",\"body\":\"issue_api_url:${{ inputs.issue_api_url }}\\nclient_name:${{ inputs.client_name }}\\nclient_code:${{ inputs.client_code }}\\nlocation:${{ inputs.location }}\\ntfvars_filepath:${{ inputs.tfvars_filepath }}\",\"head\":\"${{ inputs.head }}\",\"base\":\"${{ inputs.base }}\"}" || true)"
 
         # Try to parse number/urls from create response
         pr_number="$(printf '%s' "$create_resp" | jq -r '.number // empty' 2>/dev/null || true)"
